Simplifications to impls